--- a/Web/src/app/components/account/invite-friend/invite-friend.component.html
+++ b/Web/src/app/components/account/invite-friend/invite-friend.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
   <p class="subtitle">
       Invite your friends to Auctus and earn free AUC<br>
-      Get 1000 AUC every time you refer a friend to Auctus
+      Get {{bonusAmount}} AUC every time you refer a friend to Auctus
   </p>
   <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="10px" fxLayoutAlign.gt-sm="center start" fxLayoutAlign.lt-md="center center">
     <mat-form-field appearance="outline" class="input-modal">
