--- a/Web/src/app/components/account/referral-details/referral-details.component.html
+++ b/Web/src/app/components/account/referral-details/referral-details.component.html
@@ -1,5 +1,8 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
-  <p class="subtitle">You can share the follow link to people register using your referral code</p>
+  <p class="subtitle">
+    You can share the follow link to people register using your referral code<br/>
+    For each new user you will win {{bonusAmount}}
+  </p>
   <mat-form-field appearance="outline" class="input-modal">
     <mat-label>Referral Link</mat-label>
     <input matInput #Link placeholder="Referral Link" type="text" [(ngModel)]="link" readonly />
