--- a/Web/src/app/components/recommendation-distribution/recommendation-distribution.component.html
+++ b/Web/src/app/components/recommendation-distribution/recommendation-distribution.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row">
-    <div class="pie-chart" [chart]="pieChart"></div>
+    <div #PieChartContainer class="pie-chart"></div>
     <div class="distribution-descripton" fxLayout="column" fxLayoutAlign="center start">
         <div class="buy">
             Buy: {{totalBuy}}
