--- a/Web/src/app/components/admin/dashboard/dashboard.component.html
+++ b/Web/src/app/components/admin/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard-body">
-    <section id="header">
+    <!-- <section id="header">
         <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="5px">
             <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="70px" fxLayoutGap.xs="20px" fxLayoutGap.sm="35px">
                 <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <div class="registration-chart" [chart]="registrationChart"></div>
+            <div #registrationChart class="registration-chart"></div>
         </div>
     </section>
     <mat-divider></mat-divider>
@@ -81,7 +81,7 @@
                     </tr>
                 </table>
             </div>
-            <div [chart]="referralChart" fxFlex="50" fxFlex.xs="100" fxFlex.sm="100"></div>
+            <div #referralChart fxFlex="50" fxFlex.xs="100" fxFlex.sm="100"></div>
         </div>
     </section>
     <mat-divider></mat-divider>
@@ -111,7 +111,7 @@
                     </tr>
                 </table>
             </div>
-            <div [chart]="advicesChart" fxFlex="50" fxFlex.xs="100" fxFlex.sm="100"></div>
+            <div #advicesChart fxFlex="50" fxFlex.xs="100" fxFlex.sm="100"></div>
         </div>
     </section>
     <mat-divider></mat-divider>
@@ -141,7 +141,7 @@
                     </tr>
                 </table>
             </div>
-            <div [chart]="followingChart" fxFlex="50" fxFlex.xs="100" fxFlex.sm="100"></div>
+            <div #followingChart fxFlex="50" fxFlex.xs="100" fxFlex.sm="100"></div>
         </div>
-    </section>
+    </section> -->
 </div>
