--- a/Web/src/app/components/account/referral-details/referral-details.component.html
+++ b/Web/src/app/components/account/referral-details/referral-details.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
   <p class="subtitle">
-    You can share the follow link to people register using your referral code<br/>
-    For each new user you will win {{bonusAmount}}
+    For each new user you can earn {{bonusAmount}}.<br/>
+    You can share the follow link to people register using your referral code
   </p>
   <mat-form-field appearance="outline" class="input-modal">
     <mat-label>Referral Link</mat-label>
