--- a/Web/src/app/components/account/entry-option/entry-option.component.html
+++ b/Web/src/app/components/account/entry-option/entry-option.component.html
@@ -6,10 +6,10 @@
    
     <div *ngIf="!isLogin()" class="registration-description" fxLayout="column" fxFlex="250px" fxLayoutGap="12px" fxHide.lt-md>
         <div>
-            Lorem By becoming an user you get the following advantages:
+            By becoming an user you get the following advantages:
         </div>
         <ul>
-            <li>Get rewarded for good advice.</li>
+            <li>Get ranked for good advice.</li>
             <li>Invite new users and get rewarded.</li>
             <li>Grow your user base by getting market attention.</li>
             <li>Build your reputation as an industry expert.</li>
