Signup blue button

--- a/Web/src/app/components/account/entry-option/entry-option.component.html
+++ b/Web/src/app/components/account/entry-option/entry-option.component.html
@@ -21,7 +21,7 @@
             <div class="social-media-button" (click)="socialEntry('facebook')"><fa-icon [icon]="['fab','facebook-f']" size="2x" fxLayoutAlign="center stretch"></fa-icon><span>Continue with Facebook</span></div>
             <div class="social-media-button" (click)="socialEntry('google')"><fa-icon [icon]="['fab','google']" size="2x" fxLayoutAlign="center stretch"></fa-icon><span>Continue with Google</span></div> 
             <p>or</p>
-            <button class="large" mat-flat-button (click)="emailClick()">{{emailButtonMessage}}</button> 
+            <button class="large mat-primary" mat-flat-button (click)="emailClick()">{{emailButtonMessage}}</button> 
         </div>
         <div class="div-padding-bottom links-container" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
             <div>
