Renaming a lot of stuff

--- a/Web/src/app/components/account/configuration/configuration.component.html
+++ b/Web/src/app/components/account/configuration/configuration.component.html
@@ -3,7 +3,7 @@
     <a class="modal-link" (click)="setNewWallet()">Set a new wallet</a>
 </div> -->
 <div class="div-separation" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
-    <p class="subtitle">Receive an email notification when a new recommendation is sent by some expert or asset that you are following.</p>
+  <p class="subtitle">Receive an email notification when a new signal is emitted by some expert or asset that you are following.</p>
     <mat-checkbox required [(ngModel)]="configurationRequest.allowNotifications">Allow notifications</mat-checkbox>
 </div>
 <div fxLayout="column" fxLayoutAlign="space-evenly center">
