--- a/Web/src/app/components/admin/dashboard/dashboard.component.html
+++ b/Web/src/app/components/admin/dashboard/dashboard.component.html
@@ -95,12 +95,12 @@
                     </div>
                     <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
                         <span class="totalNumber bold">{{dashboardData.totalRecentAdvices}}</span>
-                        <span class="numberText totalText">RECENT ADVICES</span>
+                        <span class="numberText totalText">RECENT SIGNALS</span>
                     </div>
                 </div>
                 <table>
                     <tr class="totalText" style="border-bottom: 1px;">
-                        <th class="numberText bold"><i>TOP 10 ON ADVICES</i></th>
+                        <th class="numberText bold"><i>TOP 10 ON SIGNALS</i></th>
                         <th class="numberText bold">Total</th>
                         <th class="smallText">Recent</th>
                     </tr>
