--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -24,6 +24,6 @@
     </div>
   </div>
   <div class="blue-button" ngClass.gt-sm="action-button" ngClass.lt-sm="action-button-sm" fxHide.lt-md *ngIf="showButtonForExpert" (click)="onGiveRecommendationClick($event)">
-    Rate It
+    NEW SIGNAL
   </div>
 </div>
