--- a/Web/src/app/components/asset/asset-details/summary-tab/summary-tab.component.html
+++ b/Web/src/app/components/asset/asset-details/summary-tab/summary-tab.component.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="blue-button action-button" *ngIf="showNewAdviceButton" (click)="onNewAdviceClick()">
-        Rate It
+        NEW SIGNAL
       </div>
     </div>
     <div style="width:100%">
