--- a/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
+++ b/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
@@ -1,9 +1,9 @@
 <div class="global-container">
   <div class="section-title">
-    Expert Ratings
+    Expert Signals
   </div>
   <div class="section-subtitle">
-    Latest analyst ratings on cryptocurrencies
+    Latest analyst signals on cryptocurrencies
   </div>
   <div class="recommendation-list" fxHide.lt-md>
     <recommendation-box  [adviceType]="'BUY'" [adviceList]="buyAdvices"></recommendation-box>
