--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -8,7 +8,7 @@
           </td>
         </ng-container>      
         <ng-container matColumnDef="adviceType">
-          <th mat-header-cell *matHeaderCellDef> Rating </th>
+          <th mat-header-cell *matHeaderCellDef> Signal </th>
           <td mat-cell *matCellDef="let advice"> <div class="table-cell-title">{{adviceType}}</div> 
             At price {{advice.advice.assetValueAtAdviceTime | valueDisplay}} 
           </td>
