--- a/Web/src/app/components/terminal/asset-header/asset-header.component.html
+++ b/Web/src/app/components/terminal/asset-header/asset-header.component.html
@@ -97,7 +97,7 @@
             <div fxHide.xs="true" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
                 <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
                     <div class="triangle-expert-recomendation"></div>
-                    <span>Experts Recommendation</span>
+                    <span>Experts Signal</span>
                     <span *ngIf="assetData">({{getTotalExpertRecommendation()}})</span>
                 </div>
                 <div class="pointer" (click)="openReportPage()" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
@@ -141,7 +141,7 @@
             </div>
             <div fxHide.gt-xs="true" class="force-padding-top" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
                 <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-                    <span>Experts Recommendation</span>
+                    <span>Experts Signal</span>
                     <span *ngIf="assetData">({{getTotalExpertRecommendation()}})</span>
                 </div>
                 <div class="bull" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
