--- a/Web/src/app/components/util/top-image/top-image.component.html
+++ b/Web/src/app/components/util/top-image/top-image.component.html
@@ -14,8 +14,8 @@
                 </ul>
             </div>
             <div fxLayout="row" fxLayoutGap="40px">
-                <div class="blue-flat-button action-button" (click)="onNewAdviceClick()">Make a quick call</div>
-                <div class="blue-button action-button" (click)="viewProfile()">Check positions</div>
+                <div class="blue-flat-button action-button" (click)="onNewAdviceClick()">NEW SIGNAL</div>
+                <div class="blue-button action-button" (click)="viewProfile()">CHECK POSITIONS</div>
             </div>
         </div>
     </div>
