--- a/Web/src/app/components/terminal/ratings-list/ratings-list.component.html
+++ b/Web/src/app/components/terminal/ratings-list/ratings-list.component.html
@@ -1,7 +1,7 @@
 <div fxHide.lt-md class="box-header">
   <div fxLayout="row" fxLayoutAlign="space-between center">
     EXPERTS
-    <div class="blue-button action-button-sm recommendation-btn truncate" *ngIf="showRatingButton" (click)="onNewAdviceClick()">NEW RECOMMENDATION</div>
+    <div class="blue-button action-button-sm recommendation-btn truncate" *ngIf="showRatingButton" (click)="onNewAdviceClick()">NEW SIGNAL</div>
     <div class="blue-button action-button-sm become-btn truncate" *ngIf="!showRatingButton" (click)="onBecomeExpertClick()">BECOME EXPERT</div>
   </div>
   <div class="top-triangle"></div>
@@ -13,16 +13,16 @@
     <td mat-cell *matCellDef="let element"> {{element.adviceDate | timeAgo}} </td>
   </ng-container>
   <ng-container matColumnDef="recommendation">
-    <th mat-header-cell *matHeaderCellDef> Recommendation </th>
+    <th mat-header-cell *matHeaderCellDef> Signal </th>
     <td mat-cell *matCellDef="let element"> 
       <div [style.color]="getAdviceTypeColor(element.adviceType)">{{getRecommendation(element)}}</div> 
-      <div fxHide.gt-xs *ngIf="element.targetPrice">Target: {{element.targetPrice | valueDisplay}}</div>
+      <div fxHide.gt-xs *ngIf="element.targetPrice">Take profit: {{element.targetPrice | valueDisplay}}</div>
       <div fxHide.gt-xs *ngIf="element.stopLoss">Stop Loss: {{element.stopLoss | valueDisplay}}</div>
       
     </td>
   </ng-container>
   <ng-container matColumnDef="target">
-    <th mat-header-cell *matHeaderCellDef> <span fxHide.lt-sm> Target </span> </th>
+    <th mat-header-cell *matHeaderCellDef> <span fxHide.lt-sm> Take Profit </span> </th>
     <td mat-cell *matCellDef="let element"> <span fxHide.lt-sm> {{element.targetPrice | valueDisplay}} </span></td>
   </ng-container>
   <ng-container matColumnDef="stopLoss">
