--- a/Web/src/app/components/asset/asset-details/expert-ratings-tab/expert-ratings-tab.component.html
+++ b/Web/src/app/components/asset/asset-details/expert-ratings-tab/expert-ratings-tab.component.html
@@ -29,7 +29,7 @@
       </ng-container>
 
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> Rating </th>
+        <th mat-header-cell *matHeaderCellDef> Signal </th>
         <td mat-cell *matCellDef="let assetAdvisor">
           <div class="advice-data-div" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3px">
             <div [style.background-color]="getAdviceTypeColor(assetAdvisor.lastAdviceType)">
