--- a/Web/src/app/components/account/entry-option/entry-option.component.html
+++ b/Web/src/app/components/account/entry-option/entry-option.component.html
@@ -9,7 +9,7 @@
             By becoming an user you get the following advantages:
         </div>
         <ul>
-            <li>Get ranked for good advice.</li>
+            <li>Get ranked for good signals.</li>
             <li>Invite new users and get rewarded.</li>
             <li>Grow your user base by getting market attention.</li>
             <li>Build your reputation as an industry expert.</li>
