--- a/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
+++ b/Web/src/app/components/hot-site/be-an-expert/be-an-expert.component.html
@@ -10,7 +10,7 @@
       <div class="itens-list" fxFlex.gt-sm="46" fxFlex.lt-md="100" fxFlexOffset.gt-sm="54" fxFlexOffset.lt-md="0">
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Become an Auctus Expert and monetize your trading know how</span></div>
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Build your audience, while increasing your reach for monetization</span></div>
-        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Lucrative commissions by giving trading advice</span></div>
+        <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Lucrative commissions by giving trading signals</span></div>
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>No Joining fees for Experts</span></div>
         <div fxLayout="row" fxLayoutAlign="start start"><fa-icon icon="chevron-right" size="xs"></fa-icon><span>Quick and easy sign up with the largest bonuses for early joiners</span></div>
       </div>
