Remove Close from distribution calculation

--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.css
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.css
@@ -156,8 +156,7 @@
     padding-right: 6px;
 }
 
-.close-distribution{
-    border-left: 1px solid #898989;
+.buy-distribution{
     border-right: 1px solid #898989;
 }
 
