--- a/Web/src/app/components/advisor/expert-details/expert-details.component.html
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.html
@@ -3,7 +3,7 @@
     <div fxLayout="column" fxLayoutAlign.lt-md="center center">   
       <advisor-card [advisor]="expert"></advisor-card>
       <div class="distribution-box">
-        <div class="distribution-box-title">Currency Signals Distribution</div>
+        <div class="distribution-box-title">Open Signals Distribution</div>
         <recommendation-distribution [data]="expert.recommendationDistribution" [showTitle]="'true'"></recommendation-distribution>
       </div>
     </div>
