--- a/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
+++ b/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
@@ -1,7 +1,7 @@
 <button class="modal-close" [mat-dialog-close]="false" mat-dialog-close>&times;</button>
 <div fxLayout="column" fxLayoutAlign="center center" class="modal-container">
   <mat-dialog-content class="modal-content">
-    <p><b>{{getAdviceType()}}</b> signal to <b>{{data.assetName}}</b> at <b>{{data.lastValue | valueDisplay}}</b></p>
+    <p><b>{{getAdviceType()}}</b> signal to <b>{{data.assetName}}</b> at <b><ticker-field #Ticker [startValue]="data.lastValue" [pair]="data.pair"></ticker-field></b></p>
     <div fxLayout="row" fxLayoutAlign="center center" class="advanced-settings">
       <p *ngIf="data.targetPrice"><i>Take profit: {{targetPrice | valueDisplay}}</i></p>
       <p *ngIf="data.targetPrice && data.stopLoss"><i>&nbsp;-&nbsp;</i></p>
@@ -10,6 +10,6 @@
   </mat-dialog-content>
   <mat-dialog-actions class="btn-actions" fxLayoutGap="20px">
     <button fxFlex mat-stroked-button [mat-dialog-close]="false" mat-dialog-close>Cancel</button>
-    <button class="mat-primary" fxFlex mat-flat-button [mat-dialog-close]="true">Confirm</button>
+    <button class="mat-primary" fxFlex mat-flat-button (click)="onConfirm()">Confirm</button>
   </mat-dialog-actions>
 </div>
